# fargo2radmc3d

./: README.md  pyproject.toml
.github/workflows/: ci.yml
examples/2d_disk/data/: setup.par  variables.par
examples/2d_disk_scriptform/: stage1_make_temp.py  stage2_make_lines.py  stage3_make_fits.py
src/fargo2radmc3d/: __init__.py  cli.py
src/fargo2radmc3d.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/fargo2radmc3d/chemistry/: __init__.py  freezeout.py  pinte_co.py
src/fargo2radmc3d/core/: field.py  mesh.py  par.py  plot_utils.py  radmc_inputs.py
src/fargo2radmc3d/dust/: dust_density.py  dust_opacities.py  dust_temperature.py  makedustopac.py
src/fargo2radmc3d/gas/: gas_density.py  gas_temperature.py  gas_velocity.py
src/fargo2radmc3d/imaging/: final_image.py  polar.py  radmc_to_fits.py
tests/: test_cli.py  test_import_style.py  test_imports.py
